<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/themePreferences_text">

        <ListPreference
            android:id="@+id/accentColor"
            app:defaultValue='0'
            app:entries="@array/accent_entries"
            app:entryValues="@array/accent_values"
            app:key="accent"
            app:icon="@drawable/ic_accent_icon"
            app:title="@string/accentColor_header_text"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:id="@+id/darkMode"
            app:key="theme"
            app:enabled="true"
            app:defaultValue="true"
            app:icon="@drawable/ic_color_icon"
            app:title="@string/darkMode_text" />

    </PreferenceCategory>

    <!--

    <PreferenceCategory app:title="@string/uiPreferences_text">

        <SwitchPreference
            android:id="@+id/oneuiMode"
            app:key="OneuiMode"
            app:defaultValue="false"
            app:summary="@string/oneuiMode_secondaryText"
            app:title="@string/oneuiMode_primaryText" />

    </PreferenceCategory>

    -->

<!--    <PreferenceCategory app:title="@string/otherPreferences_text">-->

<!--    </PreferenceCategory>-->
</PreferenceScreen>